--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,13 +2,15 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
-    grid-gap: .5rem;
+    /* grid-gap: .5rem; */
+    grid-gap: .5rem .5rem;
     grid-template-areas: 'img-1 img-2 img-3 img-3' 'img-1 img-4 img-5 img-6' 'img-7 img-7 img-8 img-6';
 }
 
 .img-gallery a {
     width: 100%;
-    height: 11rem;
+    /* height: 11rem; */
+    height: auto;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -49,7 +51,7 @@
 
 .img-1 {
     grid-area: img-1;
-    min-height: 22rem;
+    /* min-height: 22rem; */
     background-image: url("../images/daksh-images/1-img.jpeg");
 }
 
@@ -75,7 +77,7 @@
 
 .img-6 {
     grid-area: img-6;
-    min-height: 22rem;
+    /* min-height: 22rem; */
     background-image: url("../images/daksh-images/6-img.jpg");
 }
 
@@ -91,7 +93,7 @@
 
 .img-9 {
     grid-area: img-1;
-    min-height: 22rem;
+    /* min-height: 22rem; */
     background-image: url("../images/daksh-images/9-img.jpeg");
 }
 
@@ -117,7 +119,7 @@
 
 .img-14 {
     grid-area: img-6;
-    min-height: 22rem;
+    /* min-height: 22rem; */
     background-image: url("../images/daksh-images/14-img.jpg");
 }
 
@@ -133,7 +135,7 @@
 
 .img-17 {
     grid-area: img-1;
-    min-height: 22rem;
+    /* min-height: 22rem; */
     background-image: url("../images/daksh-images/17-img.jpeg");
 }
 
@@ -159,7 +161,7 @@
 
 .img-22 {
     grid-area: img-6;
-    min-height: 22rem;
+    /* min-height: 22rem; */
     background-image: url("../images/daksh-images/22-img.jpeg");
 }
 
