--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url("../images/slide_1.jpg");
+    background-image: url("../images/home-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -243,7 +243,7 @@ nav.sticky ul li {
 }
 
 nav.sticky a .logo-unit-sticky img {
-    width: 65px;
+    width: 55px;
     transform: scale(1.3);
 }
 
@@ -341,7 +341,7 @@ nav.sticky a .logo-unit-sticky img {
 .director-img {
     height: 42.4vw;
     width: 45vw;
-    background-image: url(../images/photo_2020-12-03_20-51-05.jpg);
+    background-image: url("../images/anildaksh.jpg");
     background-size: cover;
 }
 
@@ -479,7 +479,7 @@ nav.sticky a .logo-unit-sticky img {
 
 .yt-playlists h1 {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 50px;
     text-transform: uppercase;
     font-weight: 600;
